<resources>
    <string name="app_name">我的云音乐</string>
    <string name="empty_song_tip">我的云音乐，听你想听</string>
    <string name="activity_forget_password">找回密码</string>
    <string name="activity_sheet_detail">歌单详情</string>
    <string name="activity_comment">评论</string>
    <string name="activity_user_detail">用户详情</string>
    <string name="activity_simple_player">简单播放器</string>
    <string name="activity_share_lyric_image">歌词图片</string>
    <string name="activity_select_lyric">选择歌词</string>
    <string name="activity_topic_detail">话题详情</string>
    <string name="activity_select_topic">选择话题</string>
    <string name="activity_select_friend">选择好友</string>
    <string name="activity_publish_feed">发动态</string>
    <string name="copyright" translatable="false">Copyright © %1$d xiaochen. All Rights Reserved</string>
    <string name="ad_click_tip">点击跳转详情页面查看更多</string>
    <string name="skip_ad_count">跳过广告%1$d</string>
    <string name="not_found_activity">找不到对应的应用</string>
    <string name="wifi_preload">WiFi预加载</string>
    <string name="discovery">发现</string>
    <string name="video">视频</string>
    <string name="me">我的</string>
    <string name="feed">动态</string>
    <string name="live">直播</string>
    <string name="top_banner">顶部横幅</string>
    <string name="quick_button">快捷按钮</string>
    <string name="reset_default_sort">恢复默认排序</string>
    <string name="hint_search_value">搜索</string>
    <string name="user">用户</string>
    <string name="single">单曲</string>
    <string name="singer">歌手</string>
    <string name="album">专辑</string>
    <string name="radio_station">主播电台</string>
    <string name="day_recommend">每日推荐</string>
    <string name="person_fm">私人FM</string>
    <string name="sheet">歌单</string>
    <string name="rank">排行榜</string>
    <string name="digital_album">数字专辑</string>
    <string name="recommend_sheet">推荐歌单</string>
    <string name="recommend_song">推荐单曲</string>
    <string name="loading">加载中.</string>
    <string name="upload_failed">上传失败，请稍后再试</string>
    <string name="loading_upload">上传第%1$d张图片.</string>
    <string name="play_all">播放全部</string>
    <string name="music_count">(共%1$d首)</string>
    <string name="download">下载</string>
    <string name="multi_select">多选</string>
    <string name="cancel_collect">取消收藏(%1$d)</string>
    <string name="collect">收藏歌单(%1$d)</string>
    <string name="cancel_success">取消成功</string>
    <string name="collection_success">收藏成功</string>
    <string name="search">搜索</string>
    <string name="sort">排序</string>
    <string name="report">举报</string>
    <string name="play">播放</string>
    <string name="pause">暂停</string>
    <string name="error_network_unknown_host">找不到服务器</string>
    <string name="error_network_connect">连接服务器失败</string>
    <string name="error_network_timeout">连接服务器超时</string>
    <string name="error_network_not_auth">登录信息过期</string>
    <string name="error_network_not_permission">你没有权限访问</string>
    <string name="error_network_not_found">你访问的内容不存在</string>
    <string name="error_network_server">服务器错误</string>
    <string name="error_unknown">未知错误</string>
    <string name="error_unknown_format">未知错误: %1$s</string>
    <string name="network_error_click_reload">你的网络好像不给力，点击屏幕重试</string>
    <string name="network_error">你的网络好像不给力</string>
    <string name="error_parameter">本地参数错误</string>
    <string name="error_upload_file">上传文件错误</string>
    <string name="error_response_sign">接口签名错误</string>
    <string name="error_response_decrypt">接口解密错误</string>
    <string name="sheet_list">歌单列表</string>
    <string name="category">歌单标签</string>
    <string name="not_play_music">没有可播放的音乐</string>
    <string name="collection_all">收藏全部</string>
    <string name="next_play">下一首播放</string>
    <string name="collect_to_sheet">收藏到歌单</string>
    <string name="comment_count">评论(%1$d)</string>
    <string name="share">分享</string>
    <string name="share_error">分享失败：%1$s</string>
    <string name="install_app_tip">请先安装应用</string>
    <string name="singer_name">歌手：%1$s</string>
    <string name="delete_in_sheet">从歌单中删除</string>
    <string name="lyric_empty">当前音乐没有歌词</string>
    <string name="lock_lyric_title">桌面歌词已经锁定</string>
    <string name="lock_lyric_content">点击解锁</string>
    <string name="permission_hint">我们需要获取权限，请同意，否则无法使用</string>
    <string name="record_audio_permission_hint">我们需要获取录音权限，才能语音输入</string>
    <string name="permission_record_audio_denied">你拒绝了录音权限，请允许才能语音输入</string>
    <string name="permission_record_audio_never_ask_again">你拒绝了录音权限，这是最后一次询问了，如果再拒绝，需要手动去系统设置里面打开</string>
    <string name="allow">授权</string>
    <string name="deny">拒绝</string>
    <string name="save_image">保存图片</string>
    <string name="share_lyric">分享歌词</string>
    <string name="lyric_image">歌词图片</string>
    <string name="lyric_video">歌词视频</string>
    <string name="hint_select_lyric">请选择歌词</string>
    <string name="share_song_name">—— %1$s · %2$s</string>
    <string name="error_share_failed">分享失败,请稍候再试</string>
    <string name="hint_comment">请输入评论内容.</string>
    <string name="comment">评论</string>
    <string name="send">发送</string>
    <string name="comment_create_success">评论发布成功</string>
    <string name="reply_comment">\@%1$s: %2$s</string>
    <string name="reply_hint">回复%1$s: </string>
    <string name="reply">回复</string>
    <string name="copy_success">拷贝成功</string>
    <string name="join_count">%1$d人参与</string>
    <string name="hint_search_user">昵称，拼音，首字母</string>
    <string name="song_count">%1$d首</string>
    <string name="hint_enter_sheet_name">请输入歌单名称</string>
    <string name="confirm">确认</string>
    <string name="success_create_sheet">歌单创建成功</string>
    <string name="success_collect_song_to_sheet">歌曲收藏到歌单成功</string>
    <string name="success_delete_song_in_sheet">从歌单中删除音乐成功</string>
    <string name="success_delete">删除成功</string>
    <string name="local_music">本地音乐</string>
    <string name="play_local_music">播放本地音乐</string>
    <string name="no_local_music">没有本地音乐</string>
    <string name="download_manager">下载管理</string>
    <string name="play_history">最近播放</string>
    <string name="my_radio">我的电台</string>
    <string name="my_collect">我的收藏</string>
    <string name="sati">Sati 空间</string>
    <string name="scan_local_music">扫描本地音乐</string>
    <string name="batch_edit">批量编辑</string>
    <string name="start_scan">开始扫描</string>
    <string name="found_music_count">找到%1$d首音乐</string>
    <string name="to_my_music">回到我的本地音乐</string>
    <string name="stop_scan">停止扫描</string>
    <string name="select_all">全选</string>
    <string name="cancel_select_all">取消全选</string>
    <string name="delete">删除</string>
    <string name="cancel_edit">取消编辑</string>
    <string name="tips">提示</string>
    <string name="cancel">取消</string>
    <string name="confirm_message">是否确认?</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="click_download">已暂停，点击继续下载</string>
    <string name="download_failed">下载失败，点击重试</string>
    <string name="download_progress">%1$s/%2$s</string>
    <string name="wait_download">等待下载</string>
    <string name="pause_all">全部暂停</string>
    <string name="download_all">全部开始</string>
    <string name="delete_all">全部删除</string>
    <string name="download_complete">下载完成</string>
    <string name="downloading">正在下载</string>
    <string name="already_downloaded">已经下载了</string>
    <string name="already_in_download_list">已经在下载列表中了</string>
    <string name="add_success">添加成功</string>
    <string name="error_not_download">没有下载任务</string>
    <string name="music">音乐</string>
    <string name="about_ta">关于TA</string>
    <string name="user_friend_info">关注 %1$d&#160;&#160;&#160;|&#160;&#160;&#160;粉丝 %2$d</string>
    <string name="follow">关注用户</string>
    <string name="cancel_follow">取消关注</string>
    <string name="send_message">发送消息</string>
    <string name="person_info">个人信息</string>
    <string name="nickname_value">昵称：%1$s</string>
    <string name="gender_value">性别：%1$s</string>
    <string name="birthday_value">生日：%1$s</string>
    <string name="area_value">地区：%1$s</string>
    <string name="area_value2">%1$s-%2$s-%3$s</string>
    <string name="more_info">更多信息</string>
    <string name="more">更多</string>
    <string name="description_value">个人描述：%1$s</string>
    <string name="video_info">%1$s次播放, by %2$s</string>
    <string name="count_format_ten_thousand">%1$d万</string>
    <string name="count_format_hundred_thousand">%1$d十万</string>
    <string name="count_format_million">%1$d百万</string>
    <string name="video_created_at">发布：%1$s</string>
    <string name="video_clicks_count">播放：%1$d</string>
    <string name="play_failed_time_out">播放超时，请稍候再试</string>
    <string name="play_failed">播放失败，请稍候再试</string>
    <string name="play_completion">播放完毕，点击重新播放</string>
    <string name="publish">发布</string>
    <string name="hint_feed">请输入你想说的.</string>
    <string name="current_position">当前位置</string>
    <string name="not_show_position">不显示位置</string>
    <string name="hint_current_position">所在位置：</string>
    <string name="hint_count">0/140</string>
    <string name="error_content_length">内容不能超过140字符.</string>
    <string name="feed_count">%1$d/140</string>
    <string name="error_upload_image">上传图片出错</string>
    <string name="edit">编辑</string>
    <string name="my_profile">我的资料</string>
    <string name="save">保存</string>
    <string name="avatar">头像</string>
    <string name="nickname">昵称</string>
    <string name="gender">性别</string>
    <string name="birthday">生日</string>
    <string name="area">地区</string>
    <string name="description">个人介绍</string>
    <string name="hint_description">请向大家介绍下自己吧</string>
    <string name="phone">手机号</string>
    <string name="email">邮箱</string>
    <string name="third_account">第三方账号</string>
    <string name="qq">QQ</string>
    <string name="bind">绑定</string>
    <string name="unbind">解绑</string>
    <string name="weibo">微博</string>
    <string name="select_gender">请选择性别</string>
    <string name="success_bind">绑定成功</string>
    <string name="bind_error">绑定失败</string>
    <string name="confirm_unbind">你确定解绑吗？</string>
    <string name="success_unbind">解绑成功</string>
    <string name="add">添加</string>
    <string name="hint_scan_my_code">使用我的云音乐扫描即可关注我</string>
    <string name="hint_scan_code">将二维码放入框内即可扫描</string>
    <string name="error_not_support_qrcode_format">不支持该格式</string>
    <string name="price">￥%1$.2f</string>
    <string name="price_int">￥%1d</string>
    <string name="activity_shop_detail">商品详情</string>
    <string name="go_buy">立即购买</string>
    <string name="go_study">立即学习</string>
    <string name="success_buy">已经购买了</string>
    <string name="activity_order_detail">订单详情</string>
    <string name="go_pay">去支付</string>
    <string name="error_pay_channel">支付渠道错误</string>
    <string name="hint_pay_wait">支付确认中</string>
    <string name="error_pay_cancel">支付取消</string>
    <string name="error_pay_failed">支付失败</string>
    <string name="buy_count">%1$d人购买</string>
    <string name="reset">重置</string>
    <string name="change_style">切换样式</string>
    <string name="collect_coupon">领券</string>
    <string name="wechat">微信</string>
    <string name="recognition_address_tip">粘贴文本，可以自动识别姓名，电话和地址\n例如：四川省成都市天府新区牧华路远大中央公园9栋1单元801 李薇 13141111222</string>
    <string name="recognition">识别</string>
    <string name="receive_name">收货姓名</string>
    <string name="receive_telephone">收货电话</string>
    <string name="receive_area">收货地区</string>
    <string name="detail_address">详细地址</string>
    <string name="default_address">默认地址</string>
    <string name="enter_receive_name">请输入收货姓名</string>
    <string name="enter_receive_telephone">请输入收货电话</string>
    <string name="enter_receive_area">请选择收货地区</string>
    <string name="enter_detail_address">请输入详细地址</string>
    <string name="voice_input">语音输入</string>
    <string name="enter_password">请输入密码(6~15位)</string>
    <string name="enter_confirm_password">请输入确认密码</string>
    <string name="setting">设置</string>
    <string name="scan">扫一扫</string>
</resources>