<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <!--扫一扫-->
    <shortcut
        android:enabled="true"
        android:icon="@drawable/scan_primary"
        android:shortcutId="scan"
        android:shortcutShortLabel="@string/scan">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetClass="com.example.courses.mymusic.component.scan.activity.ScanActivity"
            android:targetPackage="com.ixuea.courses.mymusic" />
    </shortcut>

    <!--搜索快捷方法-->
    <shortcut
        android:enabled="true"
        android:icon="@drawable/search_primary"
        android:shortcutId="search"
        android:shortcutShortLabel="@string/search">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetClass="com.example.courses.mymusic.component.search.activity.SearchActivity"
            android:targetPackage="com.ixuea.courses.mymusic" />
    </shortcut>

    <!--系统设置-->
    <shortcut
        android:enabled="true"
        android:icon="@drawable/scan_primary"
        android:shortcutId="setting"
        android:shortcutShortLabel="@string/setting">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetClass="com.android.settings.Settings"
            android:targetPackage="com.android.settings" />
    </shortcut>
</shortcuts>