<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.courses.mymusic.component.password.activity.SetPasswordActivity">

    <include layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/padding_outer"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <!--密码输入框-->
        <EditText
            android:id="@+id/password"
            style="@style/EditText.SingleLine"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:maxLength="15" />

        <!--确认密码输入框-->
        <EditText
            android:id="@+id/confirm_password"
            style="@style/EditText.SingleLine"
            android:hint="@string/enter_confirm_password"
            android:inputType="textPassword"
            android:maxLength="15" />

        <!--使用TextView模拟按钮的效果
        比MaterialButton更方便控制样式
        但使用要麻烦一点-->
        <TextView
            android:id="@+id/primary"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_marginTop="@dimen/padding_large"
            android:background="@drawable/selector_primary"
            android:gravity="center"
            android:text="@string/confirm"
            android:textColor="@drawable/selector_text_primary_reverse"
            android:textSize="@dimen/text_large" />
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>